--- a/css/qr.css
+++ b/css/qr.css
@@ -36,6 +36,7 @@ body {
 body {
     max-width: 640px;
     margin: 0 auto;
+    background: #ff7159;
 }
 
 .qr_logo {
@@ -144,4 +145,29 @@ body {
 
 .qr2_main {
     height: 24%;
+}
+
+  @media screen and (min-width: 360px) {
+     *{
+        font-size:19px;
+    }
+  }
+
+@media screen and (min-width: 560px) and (orientation: landscape) {
+    *{
+        font-size:28px;
+        line-height: 42px;
+    }
+    .qr1_main{
+        height: 100%;
+    }.qr_banner2{
+        height: 120%;
+    }
+    .qr2_main,.qr2_footer{
+        height:80%;
+    }
+    .qr1_footer img {
+        height: auto;
+        width: 88%;
+    }
 }
