--- a/css/sass/doughnut.scss
+++ b/css/sass/doughnut.scss
@@ -10,6 +10,7 @@ $donut: #ffd35c;
 @include font-face("Pixel Font", font-files("XPDR_02.ttf"));
 //@import "loan.scss";
 * {
+    font-size: 16px;
     font-family: "Microsoft YaHei", Arial;
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: subpixel-antialiased;
@@ -36,42 +37,39 @@ textarea {
     &_header {
         background: #0d8fdb;
         height: 48%;
-        min-height:272px;
+        min-height: 272px;
         padding-top: 45%;
+        position: relative;
         @include box-sizing("border-box");
-        *{color: #fff}
+        * {
+            color: #fff
+        }
     }
-    &_title{
+    &_title {
         position: absolute;
-        top:10px;
-        left:6%;
-        font-size:.65em;
-        em{
+        top: 10px;
+        left: 6%;
+        font-size: .65em;
+        em {
             display: block;
-            font-style:normal;
-            font-size:1.4em;
+            font-style: normal;
+            font-size: 1.4em;
         }
-        &_right{
+        &_right {
             position: absolute;
-            top:10px;
-            right:6%;
-            font-size:.65em;
+            top: 10px;
+            right: 6%;
+            font-size: .65em;
         }
     }
-    &_description{
+    &_description {
         position: absolute;
-        top:23%;
-        right:6%;
-        font-size:.75em;
-        span{
-            font-size:1.4em;
+        top: -40px;
+        right: 6%;
+        font-size: .75rem;
+        span {
+            font-size: 1.4em;
         }
-    }
-}
-@media screen and (max-height: 480px) {
-    /*当屏幕高度小于500px时，应用下面的CSS样式*/
-    .doughnut_description{
-        top:130px;
     }
 }
 
@@ -79,7 +77,7 @@ textarea {
     position: absolute;
     width: 42%;
     height: 28%;
-    min-height:160px;
+    min-height: 160px;
     top: 0;
     left: 50%;
     margin-left: -21%;
@@ -109,7 +107,7 @@ textarea {
 }
 
 .bar-wrap {
-    width: 100px;
+    width: 25%;
     display: inline-block;
     //border:1px solid #0D7E68;
     border-radius: 9px;
@@ -128,40 +126,50 @@ textarea {
     &-parameter {
         color: $donut;
     }
-    &-main{
-        height:14px;
-        margin: 25px 6% 0;
+    &-main {
+        &-wrap {
+            position: absolute;
+            bottom: 20px;
+            left:0;
+            width: 100%
+        }
+        height: 14px;
+        margin: 20px 6% 0;
         text-align: center;
-        &:first-child{
+        &:first-child {
             margin-top: 0;
         }
-        &>span {
+        &-sec {
+            width: 100%;
+            position: absolute;
+            left: 50%;
+            margin-left: -50%;
+            &>span {
+                font-size: .75em;
+                height: 14px;
+                display: inline-block;
+                line-height: 14px;
+                vertical-align: top;
+                &:after {
+                    content: "%";
+                }
+            }
+        }
+        label {
             font-size: .75em;
+            float: left;
             height: 14px;
             display: inline-block;
             line-height: 14px;
-            vertical-align: top;
-            &:after {
-                content: "%";
-            }
         }
-        label{
-            font-size:.75em;
-            float: left;
-            height:14px;
-            display:inline-block;
-            line-height:14px;
-        }
-        em{
-            font-style:normal;
-            font-size: .55em;
+        em {
+            font-style: normal;
+            font-size: .6em;
             float: right;
-            height:14px;
-            display:inline-block;
-            line-height:14px;
-
+            height: 14px;
+            display: inline-block;
+            line-height: 14px;
         }
-
     }
 }
 
@@ -187,7 +195,7 @@ textarea {
         margin: 0 auto 12px;
     }
     form {
-        color:#666;
+        color: #666;
         letter-spacing: normal;
         text-align: left;
         width: 88%;
@@ -221,46 +229,58 @@ textarea {
         }
         input {
             width: 60%;
-            display:inline-block !important;
+            display: inline-block !important;
             border: none !important;
             box-shadow: none !important;
         }
     }
-    &_predict{
+    &_predict {
         margin: 0;
         padding: 8px 0;
         text-align: center;
         border: 2px solid #ddd;
         border-radius: 8px;
-        h3{
+        h3 {
             color: #0d8fdb;
-            font-size:.95em;
+            font-size: .95em;
         }
-        p{
+        p {
             color: #aaa;
-            font-weight:lighter;
-            font-size:.6em;
+            font-weight: lighter;
+            font-size: .6em;
             line-height: 1.8em;
         }
     }
-    &_shield{
+    &_shield {
         margin: 0;
         padding: 8px 0;
         text-align: center;
-        h3{
-            margin:0 auto;
-            width:40%;
+        h3 {
+            margin: 0 auto;
+            width: 40%;
             color: #0d8fdb;
-            font-size:.95em;
+            font-size: .95em;
             padding-left: 15px;
-            background: image-url("shield.jpg") no-repeat  center left;
+            background: image-url("shield.jpg") no-repeat center left;
             background-size: auto 80%;
         }
-        p{
+        p {
             color: #aaa;
-            font-weight:lighter;
-            font-size:.6em;
+            font-weight: lighter;
+            font-size: .6em;
             line-height: 1.8em;
         }
+    }
+}
+
+  @media screen and (min-width: 360px) {
+     *{
+        font-size:19px;
+    }
+  }
+
+@media screen and (min-width: 560px) and (orientation: landscape) {
+    *{
+        font-size:20px;
     }
 }
